--- a/font.css
+++ b/font.css
@@ -68,3 +68,87 @@
     font-display: swap;
 }
 
+* {
+    box-sizing: border-box;
+}
+
+p {
+    font-family: Paperozi;
+    color: #f5f4f1;
+}
+
+.title {
+    font-family: Paperozi;
+    color: #ffffff;
+}
+body {
+    display: flex;
+    background-color: #2d2d2d;
+    gap: 24px;
+    flex-direction: column;
+}
+body > section {
+    padding: 0 24px;
+    max-width: 640px;
+    width: 100%;
+    margin: auto;
+}
+h2 {
+    color: #e0e0e0;
+    margin-top: 0;
+}
+h3 {
+    color: #2d2d2d;
+}
+.box {
+    background-color: #454545;
+    padding: 24px;
+    border-radius: 5px;
+}
+
+#intro .title {
+    text-align: center;
+}
+#intro div {
+    line-height: 1.5;
+}
+#tech-stack ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+}
+#tech-stack li {
+    list-style: none;
+    width: 128px;
+    aspect-ratio: 1;
+    background-color: #1e1e1e;
+    border-radius: 5px;
+    border: 1px transparent solid;
+    padding: 4px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#tech-stack img {
+    width: 90%;
+    height: 90%;
+    border-radius: 50%;
+    background-color: white;
+    border: 5px transparent solid;
+}
+#portfoilio .box > div {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+#portfoilio .item {
+    background-color: #1e1e1e;
+    width: 100%;
+    height: 128px;
+    border-radius: 8px;
+    border: 1px transparent solid;
+    padding: 0 16px;
+}
